# messanger-on-CPP

./: App.cpp  App.hpp  AppConstants.hpp  Button.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientController.cpp  ClientController.hpp  DBConnection.cpp  DBConnection.hpp  Message.cpp  Message.hpp  README.md  Server.cpp  Server.hpp  SqlQueries.cpp  TextBox.cpp  TextBox.hpp  UI.cpp  UI.hpp  launch_server.cpp  main.cpp
back/: Client.cpp  Client.hpp  ClientController.cpp  ClientController.hpp  ClientImplementer.cpp  ClientImplementer.hpp  ClientStorage.cpp  ClientStorage.hpp  Message.cpp  Message.hpp  Server.cpp  Server.hpp  ServerImplementer.cpp  ServerImplementer.hpp
back/db/: DBConnection.cpp  DBConnection.hpp  SqlQueries.cpp  SqlQueries.hpp
back/db/db_scripts/: ddl_scripts
db_scripts/: ddl_scripts
front/: App.cpp  App.hpp  UI.cpp  UI.hpp
front/ui_basic/: Button.hpp  TextBox.cpp  TextBox.hpp
front/ui_elements/: ConstructElem.hpp  UIElements.cpp  UIElements.hpp
front/ui_templates/: log_in.glade  log_in.ui  main.glade  main.glade~  main.ui  main.гш  sign_up.glade  sign_up.ui  test.cmb
